<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SummaryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="#018A08"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/your_game_summary"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvPlayerNameSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp"
        android:text="Hello, "
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp"
        android:text="Here are the answers selected :"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/who_is_the_best_cricketer_in_the_world"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCricketerSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp"
        android:text="Answer : "
        android:textColor="#004A04"
        android:textSize="14sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/what_are_the_colors_in_the_national_flag"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFlagColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp"
        android:text="Answer : "
        android:textColor="#004A04"
        android:textSize="14sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#B80654"
        android:text="@string/finish" />
</LinearLayout>